# aws-config-dump

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  example-config.toml  flake.nix
.claude/: settings.json
.claude/skills/run-checks/: SKILL.md
acd-cli/: Cargo.toml
acd-cli/src/: build.rs  builtin_alterations.rs  builtin_alterations.toml  cli.rs  completion.rs  config.rs  db.rs  fetcher.rs  main.rs  query.rs  schema_alterations.rs  util.rs
acd-cli/src/builtin_fetchers/: mod.rs  organizational_units.rs
aws-client/: Cargo.toml
aws-client/src/: config_client.rs  iam_client.rs  lib.rs  org_client.rs  sdk_config.rs  snapshot.rs  tag.rs
aws-config-dump/: Cargo.toml
aws-config-dump/src/: build.rs  builtin_alterations.rs  cli.rs  completion.rs  config.rs  db.rs  main.rs  query.rs  schema_alterations.rs  util.rs
db-client/: Cargo.toml
db-client/src/: lib.rs
openspec/changes/archive/2026-07-17-add-custom-fetchers/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-17-add-custom-fetchers/specs/custom-fetchers/: spec.md
openspec/changes/archive/2026-07-17-add-custom-fetchers/specs/organizational-units/: spec.md
openspec/changes/archive/2026-07-17-add-json-query-output/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-17-add-json-query-output/specs/query-output-format/: spec.md
openspec/changes/archive/2026-07-20-add-tested-example-config/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-20-add-tested-example-config/specs/config-validation/: spec.md
openspec/changes/archive/2026-07-20-add-tested-example-config/specs/example-config/: spec.md
openspec/changes/archive/2026-07-20-add-tested-example-config/specs/project-documentation/: spec.md
openspec/changes/archive/2026-07-20-docs-durable-readme/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-20-docs-durable-readme/specs/project-documentation/: spec.md
openspec/changes/archive/2026-07-20-harden-fetcher-seam/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-20-harden-fetcher-seam/specs/custom-fetchers/: spec.md
openspec/changes/archive/2026-07-20-harden-fetcher-seam/specs/organizational-units/: spec.md
openspec/changes/archive/2026-07-20-stream-ou-fetch-progress/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-20-stream-ou-fetch-progress/specs/fetcher-progress/: spec.md
openspec/changes/archive/2026-07-20-typed-fetcher-rows/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-20-typed-fetcher-rows/specs/custom-fetchers/: spec.md
openspec/specs/config-validation/: spec.md
openspec/specs/custom-fetchers/: spec.md
openspec/specs/example-config/: spec.md
openspec/specs/fetcher-progress/: spec.md
openspec/specs/organizational-units/: spec.md
openspec/specs/project-documentation/: spec.md
openspec/specs/query-output-format/: spec.md
src/: build.rs  builtin_alterations.rs  cli.rs  completion.rs  config.rs  config_fetch_client.rs  db.rs  list.rs  main.rs  org_client.rs  output.rs  query.rs  schema_alterations.rs  select.rs  snapshot.rs  util.rs
