# SPDX-FileCopyrightText: 2026 Tim Quelch <tim@tquelch.com>
#
# SPDX-License-Identifier: GPL-3.0-only

[workspace]
resolver = "3"
members = ["aws-config-dump", "aws-client"]

[workspace.package]
description = "Get data from AWS Config"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[workspace.lints.clippy]
pedantic = "warn"

[workspace.metadata.crane]
name = "aws-config-dump"
