# SPDX-FileCopyrightText: 2026 Tim Quelch <tim@tquelch.com>
#
# SPDX-License-Identifier: GPL-3.0-only

[workspace]
resolver = "3"
members = ["acd-cli", "aws-client", "db-client"]

[workspace.package]
description = "Get data from AWS Config"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/TimQuelch/acd"

[workspace.lints.clippy]
pedantic = "warn"

[workspace.metadata.crane]
name = "acd"
