# SPDX-FileCopyrightText: 2026 Tim Quelch <tim@tquelch.com>
#
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "aws-client"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
aws-config = { version = "1.8", features = [
  "behavior-version-latest",
  "test-util",
] }
aws-sdk-config = { version = "1.107", default-features = false, features = [
  "behavior-version-latest",
  "default-https-client",
  "rt-tokio",
  "test-util",
] }
aws-sdk-iam = { version = "1.113", default-features = false, features = [
  "behavior-version-latest",
  "default-https-client",
  "rt-tokio",
  "test-util",
] }
aws-sdk-organizations = { version = "1.115", default-features = false, features = [
  "behavior-version-latest",
  "default-https-client",
  "rt-tokio",
  "test-util",
] }
aws-sdk-s3 = { version = "1.133", default-features = false, features = [
  "behavior-version-latest",
  "default-https-client",
  "rt-tokio",
  "sigv4a",
  "test-util",
] }
aws-sdk-sts = { version = "1.104", default-features = false, features = [
  "behavior-version-latest",
  "default-https-client",
  "rt-tokio",
  "sigv4a",
  "test-util",
] }
aws-smithy-async = "1"
aws-smithy-types-convert = { version = "0.60", features = [
  "convert-streams",
  "convert-chrono",
] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
futures = "0.3"
indicatif = { version = "0.18", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"

[dev-dependencies]
aws-smithy-mocks = "0.2"

[lints]
workspace = true
